--- a/app/src/main/res/layout/fragment_mapview.xml
+++ b/app/src/main/res/layout/fragment_mapview.xml
@@ -16,7 +16,7 @@
         <!-- Custom Search Bar layout -->
         <include
             android:id="@+id/customSearchBar"
-            layout="@layout/layout_searchbar"
+            layout="@layout/view_searchbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/recyclerView"
