Refactor header component as custom view to use across multiple fragments

--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -56,7 +56,7 @@
                 <!--    Searchbar   -->
                 <include
                     android:id="@+id/place_searchbar"
-                    layout="@layout/layout_searchbar" />
+                    layout="@layout/view_searchbar" />
 
             </LinearLayout>
 
