--- a/app/src/main/res/layout/card_place_category_group.xml
+++ b/app/src/main/res/layout/card_place_category_group.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iv_hotel"
+        android:id="@+id/iv_hotel_image"
         android:layout_width="280sp"
         android:layout_height="200sp"
         android:src="@drawable/dineout_hori_1" />
