--- a/app/src/main/res/layout/fragment_choose_place.xml
+++ b/app/src/main/res/layout/fragment_choose_place.xml
@@ -58,7 +58,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/light_grey"
+        android:backgroundTint="@color/colorPrimary"
         android:drawablePadding="8dp"
         android:padding="12dp"
         android:text="Done"
