--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,14 +46,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/username"
-                    android:textSize="28dp"
+                    android:textSize="28sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/email"
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <RelativeLayout
@@ -75,8 +75,8 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/profile_back_button"
                         android:textAlignment="center"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="50dp"
+                        android:paddingStart="30dp"
+                        android:paddingEnd="50dp"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:src="@drawable/back_to_home_button"
