Some layout design improvments & Modularize Code for better maintainance

--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -55,9 +55,10 @@
                 android:background="#fedbdc">
 
                 <!--    Searchbar   -->
-                <include
-                    android:id="@+id/place_searchbar"
-                    layout="@layout/view_searchbar" />
+                <com.example.nearbylocator.view.SearchBarView
+                    android:id="@+id/searchBarView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
