--- a/app/src/main/res/layout/fragment_category_individual.xml
+++ b/app/src/main/res/layout/fragment_category_individual.xml
@@ -68,25 +68,11 @@
 
             </RelativeLayout>
 
-            <LinearLayout
-                android:id="@+id/ll_median"
-                android:layout_width="match_parent"
-                android:layout_height="30sp"
-                android:background="@color/black"
-                android:orientation="horizontal" />
-
             <ImageView
                 android:id="@+id/iv_dineout_hero"
                 android:layout_width="match_parent"
                 android:layout_height="345sp"
                 android:src="@drawable/dineout_img_hero" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="350sp"
-                android:layout_below="@id/iv_dineout_hero"
-                android:layout_marginTop="10sp"
-                android:src="@drawable/dineout_img_body" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,45 +80,45 @@
                 android:orientation="vertical"
                 android:paddingBottom="20sp">
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:paddingStart="10sp"-->
-<!--                    android:paddingEnd="10sp">-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10sp"
+                    android:paddingEnd="10sp">
 
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:fontFamily="@font/swiggy_font_extrabold"-->
-<!--                        android:text="Best offers near you"-->
-<!--                        android:textColor="@color/black"-->
-<!--                        android:textSize="18sp" />-->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/swiggy_font_extrabold"
+                        android:text="Best offers near you"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
 
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:fontFamily="@font/swiggy_font_medium"-->
-<!--                        android:gravity="end"-->
-<!--                        android:text="SEE ALL"-->
-<!--                        android:textColor="@color/swiggy_orange"-->
-<!--                        android:textSize="14sp" />-->
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/swiggy_font_medium"
+                        android:gravity="end"
+                        android:text="SEE ALL"
+                        android:textColor="@color/swiggy_orange"
+                        android:textSize="14sp" />
 
-<!--                </LinearLayout>-->
+                </LinearLayout>
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="@font/swiggy_font_regular"-->
-<!--                    android:paddingStart="10sp"-->
-<!--                    android:text="Restaurants to hang out in your area"-->
-<!--                    android:textSize="14sp" />-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/swiggy_font_regular"
+                    android:paddingStart="10sp"
+                    android:text="Restaurants to hang out in your area"
+                    android:textSize="14sp" />
 
-<!--                <androidx.recyclerview.widget.RecyclerView-->
-<!--                    android:id="@+id/rv_bestoffers"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:paddingTop="15sp"-->
-<!--                    android:paddingBottom="15sp" />-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_bestoffes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="15sp"
+                    android:paddingBottom="15sp" />
 
             </LinearLayout>
 
@@ -282,63 +268,10 @@
 
         </LinearLayout>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cv_searchbar"
+        <com.example.nearbylocator.view.SearchBarView
+            android:id="@+id/searchBarView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:translationZ="1000sp"
-            app:cardCornerRadius="8sp"
-            app:strokeColor="#f1f1f4">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f1f1f4"
-                android:padding="10sp">
-
-                <TextView
-                    android:id="@+id/tv_search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/swiggy_font_regular"
-                    android:maxLines="1"
-                    android:text="Search for "
-                    android:textColor="@color/grey"
-                    android:textSize="16sp" />
-
-                <TextSwitcher
-                    android:id="@+id/textSwitcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@id/tv_search"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/swiggy_font_regular"
-                    android:inAnimation="@anim/text_slide_to_top"
-                    android:outAnimation="@anim/text_slide_from_bottom"
-                    android:textColor="@color/grey" />
-
-                <ImageView
-                    android:layout_width="20sp"
-                    android:layout_height="20sp"
-                    android:layout_marginEnd="10sp"
-                    android:layout_toStartOf="@id/iv_mic"
-                    android:src="@drawable/icon_search" />
-
-                <ImageView
-                    android:id="@+id/iv_mic"
-                    android:layout_width="20sp"
-                    android:layout_height="20sp"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/icon_mic" />
-
-            </RelativeLayout>
-
-        </com.google.android.material.card.MaterialCardView>
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
