--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,13 +26,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Horizontal Scrollable Categories -->
-            <include
-                android:id="@+id/quick_place_category"
-                layout="@layout/layout_quick_place_category" />
+            <com.example.nearbylocator.view.QuickPlaceCategoryView
+                android:id="@+id/quick_place_category_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <!--   offers (dynamically added) -->
             <LinearLayout
@@ -79,7 +78,7 @@
                         android:fontFamily="@font/swiggy_font_extrabold"
                         android:gravity="center"
                         android:letterSpacing="0.2"
-                        android:text="DISCOVER NEARBY"
+                        android:text="@string/discover_nearby"
                         android:textColor="@color/dark_grey"
                         android:textStyle="bold" />
 
