--- a/app/src/main/res/layout/card_mapview_fav.xml
+++ b/app/src/main/res/layout/card_mapview_fav.xml
@@ -31,7 +31,7 @@
         android:paddingBottom="8sp">
 
         <TextView
-            android:id="@+id/tv_hotel_name"
+            android:id="@+id/tv_place_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -100,7 +100,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_hotel_location"
+            android:id="@+id/tv_place_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
