--- a/app/src/main/res/layout/card_place_category_group.xml
+++ b/app/src/main/res/layout/card_place_category_group.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iv_hotel_image"
+        android:id="@+id/iv_place_image"
         android:layout_width="280sp"
         android:layout_height="200sp"
         android:src="@drawable/dineout_hori_1" />
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_hotel_name"
+            android:id="@+id/tv_place_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -44,7 +44,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/tv_hotel_rating"
+                android:id="@+id/tv_place_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_hotel_location"
+            android:id="@+id/tv_place_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -77,7 +77,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_hotel_distance"
+            android:id="@+id/tv_place_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -99,7 +99,7 @@
         android:paddingTop="2sp">
 
         <TextView
-            android:id="@+id/tv_hotel_type"
+            android:id="@+id/tv_place_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -112,7 +112,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tv_hotel_price"
+            android:id="@+id/tv_place_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
