--- a/app/src/main/res/layout/card_service_verti.xml
+++ b/app/src/main/res/layout/card_service_verti.xml
@@ -27,7 +27,7 @@
         android:paddingBottom="8sp">
 
         <TextView
-            android:id="@+id/tv_hotel_name"
+            android:id="@+id/tv_place_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -98,7 +98,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tv_hotel_location"
+            android:id="@+id/tv_place_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
