--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -286,7 +286,7 @@
                 android:padding="30sp">
 
                 <TextView
-                    android:id="@+id/tv_hotel_location"
+                    android:id="@+id/tv_place_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
