--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -64,7 +64,11 @@
         android:id="@+id/categoryGroupFragment"
         android:name="com.example.nearbylocator.fragments.CategoryGroupFragment"
         android:label="fragment_category_group"
-        tools:layout="@layout/fragment_category_group" />
+        tools:layout="@layout/fragment_category_group" >
+        <argument
+            android:name="categoryTitle"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/categoryIndividualFragment"
         android:name="com.example.nearbylocator.fragments.CategoryIndividualFragment"
