--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".fragments.CategoryGroupFragment">
 
     <LinearLayout
         android:id="@+id/ll_header"
@@ -12,13 +14,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:background="#fedbdc"
+        android:padding="15dp"
         android:translationZ="100sp"
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/tv_category_heading_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Foods &amp; Drinks"
+            android:text="Category Heading"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -66,13 +70,16 @@
                 android:id="@+id/ll_banner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fedbdc">
+                android:background="#fedbdc"
+                android:gravity="center_horizontal"
+                android:padding="5dp">
 
                 <TextView
+                    android:id="@+id/tv_category_heading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Foods &amp; Drinks"
-                    android:textSize="25sp"
+                    android:text="Category Heading"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
