--- a/app/src/main/res/layout/fragment_category_individual.xml
+++ b/app/src/main/res/layout/fragment_category_individual.xml
@@ -19,7 +19,7 @@
         android:layout_below="@id/map_view"
         android:background="@color/black"
         android:padding="15dp"
-        android:visibility="visible"> <!-- Ensure visibility is initially visible -->
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -92,7 +92,7 @@
         android:background="@color/white"
         android:elevation="100dp"
         android:orientation="vertical"
-        android:visibility="gone"> <!-- Initially hidden, will become visible on scroll -->
+        android:visibility="gone">
 
         <com.example.nearbylocator.view.HeaderView
             android:layout_width="match_parent"
