--- a/app/src/main/res/layout/fragment_category_group.xml
+++ b/app/src/main/res/layout/fragment_category_group.xml
@@ -91,20 +91,12 @@
                 android:paddingTop="10sp"
                 android:src="@drawable/img_offerzone" />
 
-            <LinearLayout
+            <!-- Offers Section -->
+            <com.example.nearbylocator.view.OffersView
+                android:id="@+id/offers_view"
                 android:layout_width="match_parent"
-                android:layout_height="200sp"
-                android:layout_marginTop="10sp"
-                android:layout_marginBottom="20sp">
+                android:layout_height="wrap_content" />
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="80dp"
-                    android:paddingEnd="80dp" />
-
-            </LinearLayout>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -227,7 +219,7 @@
                         android:fontFamily="@font/swiggy_font_extrabold"
                         android:gravity="center"
                         android:letterSpacing="0.2"
-                        android:text="SNACKS &amp; DRINKS"
+                        android:text="Best Offers For You"
                         android:textColor="@color/dark_grey"
                         android:textStyle="bold" />
 
@@ -240,12 +232,11 @@
 
                 </LinearLayout>
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager2"
+                <!-- Offers Section -->
+                <com.example.nearbylocator.view.OffersView
+                    android:id="@+id/offers_view2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="80dp"
-                    android:paddingEnd="80dp" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
