--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,21 +34,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <!--   offers (dynamically added) -->
-            <LinearLayout
+            <!-- Offers Section -->
+            <com.example.nearbylocator.view.OffersView
+                android:id="@+id/offers_view"
                 android:layout_width="match_parent"
-                android:layout_height="200sp"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="20sp">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="80dp"
-                    android:paddingEnd="80dp" />
-
-            </LinearLayout>
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
