--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,23 +30,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!--            Quick categories -->
+            <!--    Quick categories    -->
             <include layout="@layout/layout_quick_service_categories" />
 
-            <LinearLayout
+            <!--    Offers Section  -->
+            <com.example.nearbylocator.view.OffersView
+                android:id="@+id/offers_view"
                 android:layout_width="match_parent"
-                android:layout_height="200sp"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="20sp">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewpager2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="80dp"
-                    android:paddingEnd="80dp" />
-
-            </LinearLayout>
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
