--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="swiggy_orange">#F06414</color>
     <color name="grey">#8D8E91</color>
-    <color name="light_grey">#CDD3D3D3</color>
+    <color name="light_grey">#f1f1f4</color>
     <color name="dark_grey">#6E6F74</color>
     <color name="bg_pink">#FEdBDc</color>
     <color name="bg_violet">#E6E1FC</color>
@@ -21,5 +21,9 @@
     <color name="profileBackground">#fff</color>
     <color name="blackTextColor">#000</color>
     <color name="profileEditTextColor">#707070</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
 
 </resources>
