Display categories in 3-column grid under respective headers for Choose Place screen

--- a/app/src/main/res/layout/card_quick_place_category.xml
+++ b/app/src/main/res/layout/card_quick_place_category.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
         android:padding="5dp"
         android:background="@drawable/rounded_corner"
-        android:src="@drawable/bank_icon" />
+        android:src="@drawable/place_category_icon_bank" />
 
     <TextView
         android:id="@+id/tv_category_name"
