--- a/app/src/main/res/layout/card_choose_place_category.xml
+++ b/app/src/main/res/layout/card_choose_place_category.xml
@@ -10,7 +10,7 @@
         android:layout_centerInParent="true"
         android:padding="5dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/bank_icon" />
+        android:src="@drawable/place_category_icon_bank" />
 
     <!-- Category Name -->
     <TextView
