--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SwiggyCloneApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.NearbyLocator" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <!-- Set status bar color to white -->
@@ -14,6 +14,6 @@
         <item name="android:color">@color/white</item>
     </style>
 
-    <style name="Theme.SwiggyCloneApp" parent="Base.Theme.SwiggyCloneApp" />
+    <style name="Theme.NearbyLocator" parent="Base.Theme.NearbyLocator" />
 
 </resources>
